tests/sources/invalid/enums/enum_variant_arity_mismatch.fire
// Invalid: constructing a payload variant with the wrong number of arguments.
// EXPECT: parser error

enum Shape {
    Circle(float64 radius),
    Point
}

Shape a = Shape.Circle(3.0, 4.0);  //~ ERROR FS-PARSE-0012 @17
Shape b = Shape.Point(1);  //~ ERROR FS-PARSE-0012 @17
